@@ -47,7 +47,8 @@ News
 
   - The nre module has been added, providing a better interface to PCRE than
     re.
-  - The ``expandSymlink`` procedure has been added to the ``os`` module.
+  - The ``expandSymlink`` proc has been added to the ``os`` module.
+  - The ``tailDir`` proc has been added to the ``os`` module.
 
   Language Additions
   ------------------
